--- a/style.css
+++ b/style.css
@@ -8,31 +8,27 @@ body {
 }
 
 nav {
-  background-color: bisque;
+  background-color: rgb(255, 176, 176);
   display: grid;
-  grid-template-columns: 4fr 1fr;
+  grid-template-columns: 4fr 2fr;
   align-items: center;
 }
 
 .main-nav {
   display: flex;
   flex-direction: row;
-  justify-content: space-start;
-  background-color: brown;
-  padding: 0 100px 0 100px;
+  justify-content: space-around;
+
+  padding: 0 10vw 0 10vw;
   height: 100%;
   align-items: center;
-}
-.main-nav h4 {
-  padding-right: 40px;
 }
 
 .log-in {
-  padding: 0 100px 0 0px;
-  background-color: blue;
   height: 100%;
   display: flex;
   align-items: center;
+  padding: 0 10vw 0 10vw;
 }
 section {
   background-color: aqua;
