--- a/style.css
+++ b/style.css
@@ -30,8 +30,18 @@ nav {
   align-items: center;
   padding: 0 10vw 0 10vw;
 }
-section {
+.hero-section {
+  display: flex;
+  flex-direction: row;
+}
+.hero-left {
+  background-color: antiquewhite;
+  width: 50%;
+}
+
+.hero-right {
   background-color: aqua;
+  width: 50%;
 }
 
 footer {
