--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   background-color: ffffff;
   height: 100vh;
   display: grid;
-  grid-template-rows: 100px 1fr 50px;
+  grid-template-rows: 150px 1fr 50px;
 }
 
 nav {
@@ -22,7 +22,9 @@ nav {
   height: 100%;
   align-items: center;
 }
-
+.logo {
+  max-width: 150px;
+}
 .log-in {
   height: 100%;
   display: flex;
@@ -69,8 +71,12 @@ img {
 }
 
 footer {
-  background-color: #00748e;
+  background-color: rgb(255, 176, 176);
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+h1 {
+  font-size: 50px;
 }
