--- a/style.css
+++ b/style.css
@@ -79,4 +79,18 @@ footer {
 
 h1 {
   font-size: 50px;
+  font-family: sans-serif;
+}
+
+h2 {
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  line-height: 24pt;
+}
+p {
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  line-height: 24pt;
 }
